@@ -1,3 +1,12 @@
+2005-08-31 22:05  hjanuschka
+
+	* src/libs/mysql.c: removed some debug infos
+
+2005-08-30 23:00  hjanuschka
+
+	* ChangeLog, src/sched.c: Signal handling, specialy SIGINT shutdown
+	  thingy rethought
+
 2005-08-30 22:19  hjanuschka
 
 	* ChangeLog, include/bartlby.h: moved to 0.9.2
